# kaizen

./: .gitignore  Cargo.toml  README.md
client/src/: main.rs
core/src/: lib.rs
migrations/20170430073540_create_user/: down.sql  up.sql
server/src/: auth.rs  db.rs  main.rs  models.rs
web-frontend/: package.json
web-frontend/src/: App.js
web-frontend/src/components/: RegistrationForm.js
web-frontend/src/store/: actions.js  configureStore.dev.js  initialState.js  reducers.js
