[package]
name = "kaizen"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>", "Chip Collier <photex@gmail.com>"]

[dependencies]
diesel = "0.12.0"
iron = "0.5.1"
iron-cors = "0.5.1"
serde = "1.0.2"
serde_derive = "1.0.2"
serde_json = "1.0.1"
git2 = "0.6.4"
clap = "2.23.3"

[lib]
name = "kaizen_core"
path = "core/src/lib.rs"

[[bin]]
name = "kaizen"
path = "server/src/main.rs"

[[bin]]
name = "kzn"
path = "client/src/main.rs"
